# vertical-federated-learning-cpp

./: .gitignore  CMakeLists.txt  README.md  eigen-example.cpp
data/credit/: README.md
data/neurips/: README.md
include/: DataUtils.h  EvaluateUtils.h  LocalModels.h  MyDataset.h  TrainUtils.h  VFLAggregator.h  VFLBaseLocalModel.h
python/: plot_losses.py
runs/20250317_150257/: lrLocalModel.pt  mlpLocalModel.pt  run_details.txt  vflAggregator.pt
runs/20250317_150514/: lrLocalModel.pt  mlpLocalModel.pt  run_details.txt  vflAggregator.pt
runs/20250317_150813/: lrLocalModel.pt  mlpLocalModel.pt  run_details.txt  vflAggregator.pt
runs/20250317_181003/: lrLocalModel.pt  mlpLocalModel.pt  run_details.txt  vflAggregator.pt
runs/20250317_181343/: lrLocalModel.pt  mlpLocalModel.pt  run_details.txt  vflAggregator.pt
runs/20250317_181645/: lrLocalModel.pt  mlpLocalModel.pt  run_details.txt  vflAggregator.pt
runs/20250317_195934/: best_lrLocalModel.pt  best_mlpLocalModel.pt  best_vflAggregator.pt  losses.csv  run_details.txt
runs/20250317_200419/: best_lrLocalModel.pt  best_mlpLocalModel.pt  best_vflAggregator.pt  losses.csv  run_details.txt
runs/20250406_151350/: best_lrLocalModel.pt  best_mlpLocalModel.pt  best_vflAggregator.pt  run_details.txt
runs/20250406_151452/: best_lrLocalModel.pt  best_mlpLocalModel.pt  best_vflAggregator.pt  run_details.txt
runs/20250406_151921/: best_lrLocalModel.pt  best_mlpLocalModel.pt  best_vflAggregator.pt
runs/20250406_152234/: best_lrLocalModel.pt  best_mlpLocalModel.pt  best_vflAggregator.pt
src/: DataUtils.cpp  main.cpp
